@@ -38,13 +38,13 @@
 <li><A HREF=TIFFWriteTile.3tiff.html>TIFFWriteTile.3tiff.html</a>
 <li><A HREF=fax2ps.1.html>fax2ps.1.html</a>
 <li><A HREF=fax2tiff.1.html>fax2tiff.1.html</a>
-<li><A HREF=gif2tiff.1.html>gif2tiff.1.html</a>
+<!-- <li><A HREF=gif2tiff.1.html>gif2tiff.1.html</a> -->
 <li><A HREF=pal2rgb.1.html>pal2rgb.1.html</a>
 <li><A HREF=ppm2tiff.1.html>ppm2tiff.1.html</a>
-<li><A HREF=ras2tiff.1.html>ras2tiff.1.html</a>
+<!-- <li><A HREF=ras2tiff.1.html>ras2tiff.1.html</a> -->
 <li><A HREF=raw2tiff.1.html>raw2tiff.1.html</a>
 <li><A HREF=rgb2ycbcr.1.html>rgb2ycbcr.1.html</a>
-<li><A HREF=sgi2tiff.1.html>sgi2tiff.1.html</a>
+<!-- <li><A HREF=sgi2tiff.1.html>sgi2tiff.1.html</a> -->
 <li><A HREF=thumbnail.1.html>thumbnail.1.html</a>
 <li><A HREF=tiff2bw.1.html>tiff2bw.1.html</a>
 <li><A HREF=tiff2pdf.1.html>tiff2pdf.1.html</a>
@@ -60,5 +60,5 @@
 <li><A HREF=tiffmedian.1.html>tiffmedian.1.html</a>
 <li><A HREF=tiffset.1.html>tiffset.1.html</a>
 <li><A HREF=tiffsplit.1.html>tiffsplit.1.html</a>
-<li><A HREF=tiffsv.1.html>tiffsv.1.html</a>
+<!-- <li><A HREF=tiffsv.1.html>tiffsv.1.html</a> -->
 </ul></BODY></HTML>
